--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "3.3.0",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"npm run serve\" \"cd node_modules/NeteaseCloudMusicApi && node app.js\"",
-    "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
+    "serve": "serve -l 8888 -n music",
     "build": "vue-cli-service build",
     "publish": "npm run build && cd music && now",
     "lint": "vue-cli-service lint",
